vendor/thiserror-1.0.24/tests/ui/bad-field-attr.stderr
error: #[error(transparent)] needs to go outside the enum or struct, not on an individual field
 --> $DIR/bad-field-attr.rs:5:18
  |
5 | pub struct Error(#[error(transparent)] std::io::Error);
  |                  ^^^^^^^^^^^^^^^^^^^^^
