vendor/thiserror-1.0.24/tests/ui/bad-field-attr.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
pub struct Error(#[error(transparent)] std::io::Error);

fn main() {}
